--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nguyễn Minh Đức</title>
+    <link rel="icon" href="./accsets/img/NMD.jpg" type="image/x-icon"/>
     <link rel="stylesheet" href="./accsets/css/index.css">
     <link href='https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="http://use.fontawesome.com/releases/v5.0.4/css/all.css">
@@ -16,31 +17,35 @@
         <div>
             <ul id="navbar">
                 <li><a class="trangchu active" href="#">Trang chủ</a></li>
-                <li><a class="cuahang" href="#product1">Cửa hàng</a></li>
+                <li><a class="cuahang" href="#product1">Thông tin</a></li>
                 <li><a class="dangnhap" href="#newletter">Đăng nhập</a></li>
                 <li><a class="tienich" href="#install">Tiện ích</a></li>
                 <li><a class="lienhe" href="#lienhe">Liên hệ</a></li>
                 <li><a href="https://www.facebook.com/duc240702/">Trợ giúp</a></li>
                 <li id="lg-bag"><i class="fas fa-shopping-bag"></i></li>
                 <div class="boxcart">
-                    <table>
-                        <thead>
-                            <tr>
-                                <th>Sản Phẩm</th>
-                                <th>Tên sản phẩm</th>
-                                <th>Giá tiền</th>
-                                <th>Chọn</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                        <!--   <tr>
-                                <td><img src="./accsets/img/anh1.jpg" alt=""></td>
-                                <td>Vans</td>
-                                <td>100.000</td>
-                                <td>Xóa</td>
-                            </tr> -->
-                        </tbody>
-                    </table>
+                    <div class="box-croll">
+                        <table>
+                            <thead>
+                                <tr>
+                                    <th>Sản Phẩm</th>
+                                    <th>Tên sản phẩm</th>
+                                    <th>Giá tiền</th>
+                                    <th>Chọn</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                            <!--   <tr>
+                                    <td><img src="./accsets/img/anh1.jpg" alt=""></td>
+                                    <td>Vans</td>
+                                    <td>100.000</td>
+                                    <td>Xóa</td>
+                                </tr> -->
+                            </tbody>
+                        </table>
+
+                    </div>
+                    
                     <div class="SumPrice">
                         <p>Thành Tiền: <span>0</span> VND</p>
                         <h6>Vui lòng đăng nhập để thanh toán và mua hàng.</h6>
@@ -51,7 +56,7 @@
             </ul>
         </div>
         <div id="mobile">
-        <!--   <a href="#"><i class='bx bx-cart-alt' ></i></a></li> --> 
+           <a href="#"><i class='bx bx-cart-alt' ></i></a></li>
             <i id="bar" class="fas fa-outdent"></i>
         </div>
     </section>
@@ -127,7 +132,7 @@
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
                     </div>
-                    <h4>1.300.000</h4>
+                    <h4>1.300.000 vnd</h4>
                 </div>
                 <button class="btn-cart" href="#"><i class="bx bxs-cart-add cart"></i></button>
             </div>
@@ -144,7 +149,7 @@
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
                     </div>
-                    <h4>1.200.000</h4>
+                    <h4>1.200.000 vnd</h4>
                 </div>
                 <button class="btn-cart" href="#"><i class="bx bxs-cart-add cart"></i></button>
             </div>
@@ -161,7 +166,7 @@
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
                     </div>
-                    <h4>1.450.000</h4>
+                    <h4>1.450.000 vnd</h4>
                 </div>
                 <button class="btn-cart" href="#"><i class="bx bxs-cart-add cart"></i></button>
             </div>
@@ -178,7 +183,7 @@
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
                     </div>
-                    <h4>1.000.000</h4>
+                    <h4>1.000.000 vnd</h4>
                 </div>
                 <button class="btn-cart" href="#"><i class="bx bxs-cart-add cart"></i></button>
             </div>
@@ -195,7 +200,7 @@
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
                     </div>
-                    <h4>1.300.000</h4>
+                    <h4>1.300.000 vnd</h4>
                 </div>
                 <button class="btn-cart" href="#"><i class="bx bxs-cart-add cart"></i></button>
             </div>
@@ -212,7 +217,7 @@
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
                     </div>
-                    <h4>1,650,000</h4>
+                    <h4>1,650,000 vnd</h4>
                 </div>
                 <button class="btn-cart" href="#"><i class="bx bxs-cart-add cart"></i></button>
             </div>
@@ -229,7 +234,7 @@
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
                     </div>
-                    <h4>1.600.000</h4>
+                    <h4>1.600.000 vnd</h4>
                 </div>
                 <button class="btn-cart" href="#"><i class="bx bxs-cart-add cart"></i></button>
             </div>
@@ -246,7 +251,7 @@
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
                     </div>
-                    <h4>1.900.000</h4>
+                    <h4>1.900.000 vnd</h4>
                 </div>
                 <button class="btn-cart" href="#"><i class="bx bxs-cart-add cart"></i></button>
             </div>
