--- a/cart.html
+++ b/cart.html
@@ -8,6 +8,7 @@
     <link rel="icon" href="./accsets/img/NMD.jpg" type="image/x-icon"/>
     <link rel="stylesheet" href="./accsets/css/index.css">
     <link rel="stylesheet" href="./accsets/css/cart.css">
+    <link rel="stylesheet" href="./accsets/css/login.css">
     <link href='https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="http://use.fontawesome.com/releases/v5.0.4/css/all.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
@@ -19,9 +20,20 @@
         <div>
             <ul id="navbar">
                 <li><a class="" href="login.html">Sản phẩm</a></li>
-                <li><a class="active" href="#product1">Giỏ hàng</a></li>
+                <li><a class="active" href="#product1">Thanh toán</a></li>
                 <li><a href="#lienhe">Trợ giúp</a></li>
-                <li><a href="index.html">Đăng xuất</a></li>
+                <li id="user"><a href="index.html">Đăng xuất</a></li>
+                <div class="user">
+                    <div class="user-name">
+                        <div class="img-user"><img class="img-users" src="./accsets/img/NMD.jpg" alt=""></div>
+                        <p>Nguyễn Minh Đức</p>
+                    </div>
+                    <div class="map">
+                        <p>Vị trí: khách hàng</p>
+                        <p>Số dư ví: 4.120.000 vnd</p>
+                        <p>Thay đổi thông tin</p>
+                    </div>
+                </div>
                 <!--<li id="lg-bag"><i class="fas fa-shopping-bag"></i></li> -->
                 <i id="close" class="fas fa-times"></i>
                 <!--<a href="" id="close"><i class="fas fa-times"></i></a>-->
