--- a/login.html
+++ b/login.html
@@ -19,7 +19,7 @@
         <div>
             <ul id="navbar">
                 <li><a class="active" href="#">Sản phẩm</a></li>
-                <li><a href="cart.html">Giỏ hàng</a></li>
+                <li><a href="cart.html">Thanh toán</a></li>
                 <li><a href="#lienhe">Trợ giúp</a></li>
                 <li id="user"><a href="index.html">Đăng xuất</a></li>
                 <div class="user">
